Add page for passive actors w/ new actor table design; also:
- add AI pledge
- add actor table colspan collapse using JS
- add sprite shortcode and start using it on existing pages
- add prize-points/notes to actor behavior shortcode
- allow actor shortcode output to be unlinked
- TOC on actor pages; misc typo/grammar/clarity fixes

--- a/src/layouts/partials/footer.html
+++ b/src/layouts/partials/footer.html
@@ -11,7 +11,8 @@
     <address>
         <p>
             <strong>{{ site.Title }}</strong> is a contrivance by {{/*
-            */}}<a href="{{ $p.authorUrl }}" rel="author">Scott Smitelli</a>. Found an {{/*
+            */}}<a href="{{ $p.authorUrl }}" rel="author">Scott Smitelli</a> with {{/*
+            */}}<a href='{{ ref . "acknowledgments#ai-pledge" }}'>no AI</a>. Found an {{/*
             */}}<a href="{{ $p.gitIssuesUrl }}" title="...or a bug, or an inaccuracy!">issue</a>?
         </p>
     </address>
